--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/zppro/fsrok#readme",
   "devDependencies": {
-    "jshint": "^2.9.1-rc1"
+    "jshint": "^2.9.1-rc1",
+    "should": "^8.0.0"
   },
   "dependencies": {
     "child-process-promise": "^1.0.2",
@@ -33,8 +34,10 @@
     "koa-router": "^4.3.2",
     "koa-statelessauth": "^1.0.2",
     "log4js": "^0.6.25",
+    "mongoose": "^4.3.0",
     "mssql": "^2.1.3",
-    "rfcore": "^0.0.13",
+    "rfcore": "0.0.15",
+    "thunkify": "^2.1.2",
     "underscore": "^1.8.3"
   }
 }
