--- a/src/anyang-1.0/bower.json
+++ b/src/anyang-1.0/bower.json
@@ -28,16 +28,17 @@
     "angular-ui-router": "0.2.13",
     "angular": "1.4.2",
     "angular-route": "1.4.2",
-    "angular-bootstrap": "0.12.1",
+    "angular-bootstrap": "0.13.1",
     "angular-cookies": "1.4.2",
-    "angular-translate-loader-url": "2.6.0",
-    "angular-translate-loader-static-files": "2.6.0",
-    "angular-translate-storage-local": "2.6.0",
-    "angular-translate-storage-cookie": "2.6.0",
+    "angular-translate-loader-url": "2.10.0",
+    "angular-translate-loader-static-files": "2.10.0",
+    "angular-translate-storage-local": "2.10.0",
+    "angular-translate-storage-cookie": "2.10.0",
     "angular-animate": "1.4.2",
     "angular-ui-utils": "0.2.2",
     "fontawesome": "4.3.0",
     "oclazyload": "0.6.3",
+    "moment": "2.9.0",
     "ngstorage": "0.3.0",
     "jquery": "2.1.3",
     "modernizr": "2.8.3",
@@ -45,7 +46,10 @@
     "angular-resource": "1.4.2",
     "simple-line-icons": "0.1.1",
     "angular-touch": "1.4.2",
-    "jquery.browser": "master"
+    "jquery.browser": "master",
+    "angular-block-ui": "~0.2.2",
+    "underscore": "~1.8.3",
+    "angular-i18n": "1.4.2"
   },
   "resolutions": {
     "angular": "1.4.2",
