--- a/src/anyang-1.0/bower.json
+++ b/src/anyang-1.0/bower.json
@@ -49,7 +49,10 @@
     "jquery.browser": "master",
     "angular-block-ui": "~0.2.2",
     "underscore": "~1.8.3",
-    "angular-i18n": "1.4.2"
+    "angular-i18n": "1.4.2",
+    "angular-ui-validate": "~1.2.2",
+    "ui-select": "angular-ui-select#~0.16.0",
+    "ng-dialog": "0.5.6"
   },
   "resolutions": {
     "angular": "1.4.2",
