--- a/src/anyang-1.0/bower.json
+++ b/src/anyang-1.0/bower.json
@@ -52,7 +52,9 @@
     "angular-i18n": "1.4.2",
     "angular-ui-validate": "~1.2.2",
     "ui-select": "angular-ui-select#~0.16.0",
-    "ng-dialog": "0.5.6"
+    "ng-dialog": "0.5.6",
+    "angularjs-slider": "~2.11.0",
+    "bowser": "browser#~1.0.0"
   },
   "resolutions": {
     "angular": "1.4.2",
