--- a/src/anyang-1.0/bower.json
+++ b/src/anyang-1.0/bower.json
@@ -54,7 +54,8 @@
     "ui-select": "angular-ui-select#~0.16.0",
     "ng-dialog": "0.5.6",
     "angularjs-slider": "~2.11.0",
-    "bowser": "browser#~1.0.0"
+    "bowser": "browser#~1.0.0",
+    "object-hash": "git@github.com:puleos/object-hash#~1.1.2"
   },
   "resolutions": {
     "angular": "1.4.2",
