--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"./start-app.sh",
-    "publish":"./start-gulp.sh"
+    "gulp":"./start-gulp.sh"
   },
   "repository": {
     "type": "git",
