--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rfcore": "^0.1.10",
     "thunkify": "^2.1.2",
     "underscore": "^1.8.3",
-    "fs-extra": "0.30.0"
+    "fs-extra": "0.30.0",
+    "rand-token": "0.2.1"
   }
 }
